@@ -16,15 +16,19 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 ***********************************************************************/
 
+// used to set import/export for Cygwin DLLs
+#ifdef WIN32
+#define USING_OBDLL
+#endif
+
 #include "babelconfig.h"
 
 #include <math.h>
+#include <stdio.h>
+#include <iostream>
 
 #include "mol.h"
 #include "data.h"
-
-#include <stdio.h>
-#include <iostream>
 
 using namespace std;
 using namespace OpenBabel;
