@@ -16,9 +16,15 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 ***********************************************************************/
 
-#include <fstream>
+// used to set import/export for Cygwin DLLs
+#ifdef WIN32
+#define USING_OBDLL
+#endif
 
 #include "babelconfig.h"
+
+#include <fstream>
+
 #include "mol.h"
 #include "obconversion.h"
 
