@@ -2,7 +2,7 @@
 roundtrip.cpp - Test "roundtrip" results for converting from one molec. format
                 to another.
 
-Copyright (C) 2003-2005 Geoffrey R. Hutchison
+Copyright (C) 2003-2006 Geoffrey R. Hutchison
  
 This file is part of the Open Babel project.
 For more information, see <http://openbabel.sourceforge.net/>
@@ -16,6 +16,11 @@ but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 ***********************************************************************/
+
+// used to set import/export for Cygwin DLLs
+#ifdef WIN32
+#define USING_OBDLL
+#endif
 
 #include "babelconfig.h"
 #include "mol.h"
